Version 0.4.2 (2016-04-29)
==========================

* Use system fonts when possible.
* Change shortcuts for changing tabs to Alt+NUMBER (instead of
  Control+NUMBER, #21).
* Improve readability of rowcount and query duration (#19).


Version 0.4.1 (2015-04-30)
==========================

* Shortcuts for disconnecting an editor from an connection and connecting to
  db have changed. The sequence is now
  F9  - assign an connection
  F10 - connect to database
  F11 - disconnect (and revoke assignment)

Bugs fixed
* Fix a regression in statement splitter (#7).
* Fix a bug when building connection parameters for Oracle (#2).
* Improve statement preparation for Oracle (#5).


Version 0.4.0 (2015-03-02)
==========================

* Improve data rendering in result list.
* Autocompletion now includes views and their columns.
* View and save blob file contents.
* Export selection from results to CSV.
* View full multi-line contents in popup window.

Bugs fixed

* Oracle: schema refresh could lead to KeyError when fetching columns (#1).


Version 0.3.0 (2015-02-06)
==========================

* Add completions for SQL keywords.
* Add completions for tables and columns.
* Add support for MySQL/MariaDB, SQLite3 and Oracle databases.
* Change shortcuts to switch editors to Ctrl+<number>.
* Support for SSH tunnels when opening a connection.
  A shell command is executed in a subprocess. The command
  doesn't accept any input for now.


Version 0.2.0 (2015-02-01)
==========================

* Format SQL statement at cursor (Alt+F).
* Jump to next/previous statement (Alt+Shift+Down, Alt+Shift+Up).
* Passwords are now saved in keyring.


Version 0.1.0 (2015-01-31)
==========================

* Initial version.